--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,7 +92,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
-            android:layout_margin="16dp"
+            android:layout_marginBottom="80dp"
+            android:layout_marginRight="60dp"
             android:src="@drawable/ic_ar_foreground"
             app:fabSize="auto"
             android:onClick="fabOnClick"
