--- a/app/src/main/res/layout/activity_camera_video_overlay.xml
+++ b/app/src/main/res/layout/activity_camera_video_overlay.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
@@ -17,4 +16,33 @@
         android:layout_gravity="bottom|center_horizontal"
         android:layout_marginBottom="16dp" />
 
+    <FrameLayout
+        android:id="@+id/loadingScreen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:background="#80000000"
+        android:visibility="gone">
+
+    <!-- Loading Text -->
+    <TextView
+        android:id="@+id/loadingText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Loading..."
+        android:textSize="18sp"
+        android:textColor="#ffffff"
+        android:layout_gravity="center|top"
+        android:layout_marginTop="40dp" />
+
+    <ProgressBar
+        android:id="@+id/loadingProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:indeterminate="true"
+        android:visibility="visible"
+        android:layout_marginTop="100dp" />
 </FrameLayout>
+
+    </FrameLayout>
